--- a/code.html
+++ b/code.html
@@ -44,55 +44,31 @@
             <a class="am-dropdown-toggle" href="#" data-am-dropdown-toggle>
                 <h4 style="color: black" data-am-dropdown-toggle><img src="assets/images/user.png"> 小邦</h4>
             </a>
-            <ul class="am-dropdown-content am-radius am-text-center">
-                <li><a href="#">重置密码</a></li>
+            <ul class="am-dropdown-content am-radius am-text-center" style="z-index: 1000">
+                <li style="z-index: 1000"><a href="#">重置密码</a></li>
                 <li class="am-divider"></li>
-                <li><a href="#">补全生日</a></li>
+                <li style="z-index: 1000"><a href="#">补全生日</a></li>
             </ul>
-        </div>
-    </header>
-    <hr class="am-margin-0"/>
-    <!--am-animation-scale-down-->
-    <header data-am-widget="header"
-            class="am-header am-header-default bg-white am-animation-scale-down" id="test1" style="display: none">
-        <div class="am-header-left am-header-nav">
-            <a href="#left-link">
-                <i class="iconfont text-orange">&#xe606;</i><span class="text-orange am-text-sm"> 返回</span>
-            </a>
-        </div>
-
-        <h1 class="am-header-title">
-            <a href="#title-link">
-                <div class="text-black am-text-truncate ">很高兴遇到你 (中山北路店)</div>
-            </a>
-        </h1>
-
-        <div class="am-header-right am-header-nav">
-            <a href="#right-link" class="text-orange">
-                <i class="iconfont text-orange">&#xe600;</i>
-            </a>
-            <a href="#right-link" class="text-orange">
-                <i class="iconfont text-orange">&#xe601;</i>
-            </a>
         </div>
     </header>
     <hr/>
 </div>
 
-<div style="background: url('assets/i/img.png') repeat" id="test">
-    <div class="am-padding-sm">
-        <div class="back am-circle  am-fl icon">
-            <div class="text-white icon-text">
-                <i class="iconfont">&#xe606;</i>
+<div style="background: url('assets/i/img.png') repeat">
+    <div id="test" class="am-padding-sm text-white am-text-right am-g am-sticky">
+        <div class="back am-fl am-circle icon">
+            <div class="icon-text">
+                <i class="iconfont">&#xe60a;</i>
             </div>
         </div>
-        <div class="back am-circle am-fr am-margin-left-sm icon">
-            <div class="text-white icon-text">
+        <div class="text-black am-text-truncate am-u-sm-6 am-u-sm-offset-1 am-inline am-hide">很高兴遇到你 (中山北路店)</div>
+        <div class="back am-circle am-fr am-margin-left-sm icon ">
+            <div class="icon-text">
                 <i class="iconfont">&#xe601;</i>
             </div>
         </div>
         <div class="back am-circle am-fr icon">
-            <div class="text-white icon-text">
+            <div class="icon-text">
                 <i class="iconfont">&#xe600;</i>
             </div>
         </div>
@@ -118,41 +94,15 @@
         </div>
     </div>
 </div>
-
 <hr/>
 <div class="am-padding-vertical" style="background: url('assets/images/listBg.png') no-repeat;margin: auto">
-    <div class=" am-g am-vertical-align ">
-        <!--<div class="am-u-sm-1">-->
-        <!--<img src="assets/images/coupon.png" class="icon am-margin-top-xs">-->
-        <!--</div>-->
-        <!--<div class="am-u-sm-7 am-padding-left am-text-sm" style=" display:inline-block;-->
-        <!--vertical-align:middle;">免费领会员啦！积分双倍！-->
-        <!--<div class="text-grey am-text-xs">2015.7.1前有效</div>-->
-        <!--</div>-->
-        <!---->
-        <!--<div class="am-u-sm-4 text-grey am-text-xs">已有2000人领取-->
-        <!--<div class="am-fr"><i class="iconfont">&#xe605;</i></div>-->
-        <!--</div>-->
-        <div class="container am-u-sm-12">
-            <!--<div style=" display:inline-block;-->
-        <!--vertical-align:middle;width: 20%;">-->
-                <!--<img src="assets/images/coupon.png" class="icon" style="width:10%;vertical-align: text-top">-->
-            <!--</div>-->
-            <div class="am-inline-block am-vertical-align-middle" style="width: 80%;">
-                <ul class="am-inline">
-                    <li class="">免费领会员啦！积分双倍！</li>
-                    <li class="">免费领会员啦！积分双倍！</li>
-                </ul>
-                <img src="assets/images/coupon.png" class="icon" style="vertical-align: text-top">
-                <div class="am-inline">免费领会员啦！积分双倍！</div>
-
-                生命里有着多少的无奈和惋惜,有着怎样的愁苦和感伤?<br>
-                雨浸风蚀的落寞与苍楚一定是水,静静<br>地流过青春奋斗的日子<br>和触摸理想的岁月。
-            </div>
-            <div style=" display:inline-block;
-        vertical-align:middle;width: 40%;">地流过青春奋斗的日子<br>和触摸理想的岁月。
-            </div>
-            ooooo<br/>444
+    <div class="am-g am-inline">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon" style="vertical-align: text-top">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs am-inline" style="vertical-align: text-top">已有2000人领取
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
 </div>
@@ -165,36 +115,78 @@
         <div class="am-fr"></div>
     </div>
 </a>
-<hr/>
-<div class="am-g am-padding-top">
-    <div class="am-u-sm-1">
-        <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
-    </div>
-    <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
-    <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
-        <img src="assets/images/领券到特权@2x.png" style="width: 80%">
-        <div class="text-white activity-img">领劵到特权
+<div id="activity">
+    <hr/>
+    <div class="am-g am-padding-top">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
         </div>
-        <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
+            <img src="assets/images/领券到特权@2x.png" style="width: 80%">
+            <div class="text-white activity-img">领劵到特权
+            </div>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
     </div>
-</div>
-<hr/>
-<div class="am-g am-padding-top">
-    <div class="am-u-sm-1">
-        <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
-    </div>
-    <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
-    <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
-        <img src="assets/images/领券到特权@2x.png" style="width: 80%">
-        <div class="text-white activity-img">领劵到特权</div>
-        <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+    <hr/>
+    <div class="am-g am-padding-top">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
+            <img src="assets/images/领券到特权@2x.png" style="width: 80%">
+            <div class="text-white activity-img">领劵到特权</div>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
 
+        </div>
+    </div>
+    <hr class="am-hide"/>
+    <div class="am-g am-padding-top am-hide">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
+            <img src="assets/images/领券到特权@2x.png" style="width: 80%">
+            <div class="text-white activity-img">领劵到特权</div>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+
+        </div>
+    </div>
+    <hr class="am-hide"/>
+    <div class="am-g am-padding-top am-hide">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
+            <img src="assets/images/领券到特权@2x.png" style="width: 80%">
+            <div class="text-white activity-img">领劵到特权</div>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+
+        </div>
+    </div>
+    <hr class="am-hide"/>
+    <div class="am-g am-padding-top am-hide">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
+            <img src="assets/images/领券到特权@2x.png" style="width: 80%">
+            <div class="text-white activity-img">领劵到特权</div>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+
+        </div>
     </div>
 </div>
 <hr/>
-<div class="am-text-center am-padding-xs" style="background: #f9f9f9">
+<div class="am-text-center am-padding-xs" id="more" style="background: #f9f9f9">
     更多优惠 <span class="am-icon-caret-down"></span>
 </div>
+<hr/>
 <div class="am-padding  second-title am-text-center">
     <img src="assets/images/star@1x.png" alt=""> &nbsp;&nbsp;买单可享&nbsp;&nbsp;
     <img src="assets/images/star@1x.png" alt="">
@@ -281,18 +273,16 @@
 			<i class="iconfont">&#xe605;</i>
 		</span>
     </div>
-    <!--<div class="second-title am-padding-top">-->
-    <!--<div class="liner">-->
-    <!--</div>-->
-    <!--</div>-->
 </div>
 <div class="am-g" style="position: fixed;bottom: 0;background: white" data-am-sticky>
     <hr/>
     <div class="am-g am-margin-vertical-sm ">
         <div class="am-u-sm-12  am-text-center">
+            <a href="power.html">
             <button class=" am-u-sm-10 am-u-sm-offset-1 am-btn am-radius" style="background: #ff6966;color: #fff">召唤特权
                 智付买单
             </button>
+            </a>
         </div>
     </div>
     <div class="am-text-center am-text-xs" style="color: #ff6966"><img src="assets/images/pay.png">
@@ -300,23 +290,46 @@
     </div>
     <hr style="margin: 5px 0"/>
     <div class="am-text-center am-text-xs am-padding-bottom-xs" data-am-scrollspy="{animation:'fade'}">
-        现在下载上宾APP，尊享"智付"体验，特权由你
+        现在下载上宾APP，尊享"智付"体验，特权由你 <img src="assets/images/download@1x.png" alt="下载" class="icon">
     </div>
 </div>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/amazeui.min.js"></script>
 
 <script>
-    //    $(window).one("scroll", function () {
-    //        $("#test1").slideDown("slow");
-    //        $('#test').slideUp("slow");
-    ////        $(window).smoothScroll({position: -300});
-    //        $('html, body').animate({scrollTop: -50}, '500');
-    ////        if ($(window).scrollTop() == $(document).height() - $(window).height()) {
-    ////            alert('bottom!!');
-    ////
-    ////        }
-    //    });
+    $(function () {
+        $(window).scroll(function () {
+            var a = ___getPageScroll();
+            if (a < 50) {
+                $('#test').css('opacity', '').css('background-color', '').css('color', 'white').css('border-bottom-width',0);
+                $('#test').find('.back').css('background-color', 'rgba(0, 0, 0, 0.4)');
+                $('#test').find('.am-text-truncate').addClass('am-hide');
+            } else {
+                if (a < 192) {
+                    $('#test').css('opacity', a / 191).css('background-color', '#fff').css('color', '#ff6966').css('border-bottom','1px #e5e5e5 solid');
+                    $('#test').find('.back').css('background-color', '#fff');
+                    $('#test').find('.am-hide').removeClass('am-hide');
+                    $('#test').removeClass('am-margin-left-sm');
+                }
+            }
+        });
+        $('#more').on('click', function () {
+            $(this).hide();
+            $('#activity').find('.am-hide').removeClass('am-hide');
+        });
+        function ___getPageScroll() {
+            var yScroll;
+            if (self.pageYOffset) {
+                yScroll = self.pageYOffset;
+                console.log(yScroll);
+            } else if (document.documentElement && document.documentElement.scrollTop) { // Explorer 6 Strict
+                yScroll = document.documentElement.scrollTop;
+            } else if (document.body) {// all other Explorers
+                yScroll = document.body.scrollTop;
+            }
+            return yScroll;
+        }
+    });
 
 
 </script>
