--- a/index.html
+++ b/index.html
@@ -26,79 +26,36 @@
     <meta name="apple-mobile-web-app-title" content="SHANGBIN"/>
 
     <link rel="stylesheet" href="assets/css/amazeui.css">
-    <link rel="stylesheet" href="assets/css/app.css">
-<style>
+    <!--<link rel="stylesheet" href="assets/css/app.css">-->
+    <link rel="stylesheet" href="assets/css/common.css">
 
-</style>
 </head>
 
 <body>
 <div class="bg-white" data-am-sticky>
     <header data-am-widget="header" class="am-header am-header-default bg-white">
         <div class="am-header-left ">
-            <a href="http://ishangbin.com">
-                <img src="assets/i/favicon.png" style="width: 80px;height: 30px">
-            </a>
+            <img src="assets/i/favicon.png" style="width: 80px;height: 30px">
         </div>
 
         <div class="am-header-right am-header-nav am-dropdown" style="color: black" data-am-dropdown>
             <a class="am-dropdown-toggle" href="#" data-am-dropdown-toggle>
                 <h4 style="color: black" data-am-dropdown-toggle><img src="assets/images/user.png"> 小邦</h4>
             </a>
-            <ul class="am-dropdown-content am-radius am-text-center">
-                <li><a href="#">重置密码</a></li>
+            <ul class="am-dropdown-content am-radius am-text-center" style="z-index: 1000">
+                <li style="z-index: 1000"><a href="#">重置密码</a></li>
                 <li class="am-divider"></li>
-                <li><a href="#">补全生日</a></li>
+                <li style="z-index: 1000"><a href="#">补全生日</a></li>
+                <li class="am-divider"></li>
+                <li style="z-index: 1000"><a href="#">登出</a></li>
             </ul>
-        </div>
-    </header>
-    <hr class="am-margin-0"/>
-    <!--am-animation-scale-down-->
-    <header data-am-widget="header"
-            class="am-header am-header-default bg-white am-animation-scale-down" id="test1" style="display: none">
-        <div class="am-header-left am-header-nav">
-            <a href="#left-link">
-                <i class="iconfont text-orange">&#xe606;</i><span class="text-orange am-text-sm"> 返回</span>
-            </a>
-        </div>
-
-        <h1 class="am-header-title">
-            <a href="#title-link">
-                <div class="text-black am-text-truncate ">很高兴遇到你 (中山北路店)</div>
-            </a>
-        </h1>
-
-        <div class="am-header-right am-header-nav">
-            <a href="#right-link" class="text-orange">
-                <i class="iconfont text-orange">&#xe600;</i>
-            </a>
-            <a href="#right-link" class="text-orange">
-                <i class="iconfont text-orange">&#xe601;</i>
-            </a>
         </div>
     </header>
     <hr/>
 </div>
 
-<div style="background: url('assets/i/img.png') repeat" id="test">
-    <div class="am-padding-sm">
-        <div class="back am-circle  am-fl icon">
-            <div class="text-white icon-text">
-                <i class="iconfont">&#xe606;</i>
-            </div>
-        </div>
-        <div class="back am-circle am-fr am-margin-left-sm icon">
-            <div class="text-white icon-text">
-                <i class="iconfont">&#xe601;</i>
-            </div>
-        </div>
-        <div class="back am-circle am-fr icon">
-            <div class="text-white icon-text">
-                <i class="iconfont">&#xe600;</i>
-            </div>
-        </div>
-    </div>
-    <div style="height: 100px"></div>
+<div style="background: url('assets/i/img.png') repeat">
+
     <div class="am-text-center  am-padding-vertical-sm">
         <div class="back am-u-sm-11  am-radius  am-u-sm-centered am-text-left">
             <div class="box am-text-lg am-padding-bottom-sm">
@@ -112,65 +69,107 @@
                 <div class="flag-border am-fl">$30/位</div>
                 <div class="flag-border am-fl">$30/位</div>
                 <div class="flag-border am-fl">$30/位</div>
-
             </div>
             <div class="am-cf">
             </div>
         </div>
     </div>
 </div>
-
 <hr/>
-<!--<div class="am-padding-vertical" style="background: url('assets/images/listBg.png') no-repeat;margin: auto">-->
-<!--<div class=" am-g am-vertical-align ">-->
-<!--<div class="am-u-sm-1">-->
-<!--<img src="assets/images/coupon.png" class="icon am-margin-top-xs">-->
-<!--</div>-->
-<!--<div class="am-u-sm-7 am-padding-left am-text-sm">免费领会员啦！积分双倍！-->
-<!--<div class="text-grey am-text-xs">2015.7.1前有效</div>-->
-<!--</div>-->
-<!--<div class="am-u-sm-4 text-grey am-text-xs">已有2000人领取-->
-<!--<div class="am-fr"><i class="iconfont">&#xe605;</i></div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--<hr/>-->
-<div class="am-padding-vertical am-padding-horizontal-sm"
-     style="background: url('assets/images/listBgVerifyvip.png') no-repeat;  background-size:100%">
-    <div>张三，你现在是本店银卡会员<span class="am-fr text-grey"><i class="iconfont">&#xe605;</i></span></div>
-    <div class="am-fr"></div>
-</div>
-<hr/>
-<div class="am-g am-padding-top">
-    <div class="am-u-sm-1">
-        <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
-    </div>
-    <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
-    <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
-        <img src="assets/images/领券到特权@2x.png" style="width: 80%">
-        <div class="text-white activity-img">领劵到特权
+<div class="am-padding-vertical" style="background: url('assets/images/listBg.png') no-repeat;">
+    <div class="am-g am-inline">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon" style="vertical-align: text-top">
         </div>
-        <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs am-inline">已有2000人领取
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
     </div>
 </div>
-<hr/>
-<div class="am-g am-padding-top">
-    <div class="am-u-sm-1">
-        <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
-    </div>
-    <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
-    <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
-        <img src="assets/images/领券到特权@2x.png" style="width: 80%">
-        <div class="text-white activity-img">领劵到特权</div>
-        <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
 
+<hr/>
+<a href="vip.html">
+    <div class="am-g am-padding-vertical"
+         style="background: url('assets/images/listBgVerifyvip.png') no-repeat;  background-size:100%">
+        <div class=" am-u-sm-offset-1 am-u-sm-9 am-padding-left am-text-sm">你是会员会员会员</div>
+        <div class="am-u-sm-2 text-grey am-text-xs am-inline">
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
+    </div>
+</a>
+<div id="activity">
+    <hr/>
+    <div class="am-g am-padding-vertical">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+                领劵到特权
+            </button>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
+    </div>
+    <hr/>
+    <div class="am-g am-padding-vertical">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+                领劵到特权
+            </button>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
+    </div>
+    <hr class="am-hide"/>
+    <div class="am-g am-padding-vertical">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+                领劵到特权
+            </button>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
+    </div>
+    <hr class="am-hide"/>
+    <div class="am-g am-padding-vertical am-hide">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+                领劵到特权
+            </button>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
+    </div>
+    <hr class="am-hide"/>
+    <div class="am-g am-padding-vertical am-hide">
+        <div class="am-u-sm-1">
+            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+                领劵到特权
+            </button>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
     </div>
 </div>
 <hr/>
-<div class="am-text-center am-padding-xs" style="background: #f9f9f9">
+<div class="am-text-center am-padding-xs" id="more" style="background: #f9f9f9">
     更多优惠 <span class="am-icon-caret-down"></span>
 </div>
+<hr/>
 <div class="am-padding  second-title am-text-center">
     <img src="assets/images/star@1x.png" alt=""> &nbsp;&nbsp;买单可享&nbsp;&nbsp;
     <img src="assets/images/star@1x.png" alt="">
@@ -258,40 +257,46 @@
 		</span>
     </div>
 </div>
-<div class="am-g" style="position: fixed;bottom: 0;background: white" data-am-sticky>
-    <div class="second-title am-padding-top">
-        <div class="liner">
-        </div>
-    </div>
-    <div class="am-g am-margin-vertical ">
+<div class="am-g am-sticky" style="position: fixed;bottom: 0;background: white">
+    <hr/>
+    <div class="am-g am-margin-vertical-sm ">
         <div class="am-u-sm-12  am-text-center">
-            <button class=" am-u-sm-10 am-u-sm-offset-1 am-btn am-radius" style="background: #ff6966;color: #fff">召唤特权
-                智付买单
-            </button>
+            <a href="power.html">
+                <button class=" am-u-sm-10 am-u-sm-offset-1 am-btn am-radius" style="background: #ff6966;color: #fff">
+                    召唤特权
+                    智付买单
+                </button>
+            </a>
         </div>
     </div>
     <div class="am-text-center am-text-xs" style="color: #ff6966"><img src="assets/images/pay.png">
-        买单时，上宾会自动发匹配最佳优惠（已有12人支付买单）
+        上宾会自动发匹配最佳优惠（已有12人支付买单）
     </div>
-    <hr style="margin: 10px 0"/>
-    <div class="am-text-center am-text-xs" data-am-scrollspy="{animation:'fade'}">现在下载上宾APP，尊享"智付"体验，特权由你
+    <hr style="margin: 5px 0"/>
+    <div id="footer" class="am-hide am-text-center am-text-xs am-padding-bottom-xs"
+         data-am-scrollspy="{animation:'fade'}">
+        现在下载上宾APP，尊享"智付"体验，特权由你 <img src="assets/images/download@1x.png" alt="下载" style="height: 15px">
     </div>
 </div>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/amazeui.min.js"></script>
 
 <script>
-//    $(window).one("scroll", function () {
-//        $("#test1").slideDown("slow");
-//        $('#test').slideUp("slow");
-////        $(window).smoothScroll({position: -300});
-//        $('html, body').animate({scrollTop: -50}, '500');
-////        if ($(window).scrollTop() == $(document).height() - $(window).height()) {
-////            alert('bottom!!');
-////
-////        }
-//    });
-
+    $(function () {
+        $('#more').on('click', function () {
+            $(this).hide();
+            $('#activity').find('.am-hide').removeClass('am-hide');
+        });
+        $(window).scroll(function () {
+            var yScroll = self.pageYOffset;
+            if (yScroll == 0) {
+                $('#footer').addClass('am-hide');
+            }
+            else {
+                $('#footer').removeClass('am-hide');
+            }
+        });
+    });
 
 </script>
 </body>
