--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <meta name="apple-mobile-web-app-title" content="SHANGBIN"/>
 
     <link rel="stylesheet" href="assets/css/amazeui.css">
-    <!--<link rel="stylesheet" href="assets/css/app.css">-->
     <link rel="stylesheet" href="assets/css/common.css">
 
 </head>
@@ -42,19 +41,19 @@
             <a class="am-dropdown-toggle" href="#" data-am-dropdown-toggle>
                 <h4 style="color: black" data-am-dropdown-toggle><img src="assets/images/user.png"> 小邦</h4>
             </a>
-            <ul class="am-dropdown-content am-radius am-text-center" style="z-index: 1000">
-                <li style="z-index: 1000"><a href="#">重置密码</a></li>
+            <ul class="am-dropdown-content am-radius am-text-center">
+                <li><a href="#">重置密码</a></li>
                 <li class="am-divider"></li>
-                <li style="z-index: 1000"><a href="#">补全生日</a></li>
+                <li><a href="#">补全生日</a></li>
                 <li class="am-divider"></li>
-                <li style="z-index: 1000"><a href="#">登出</a></li>
+                <li><a href="#">登出</a></li>
             </ul>
         </div>
     </header>
     <hr/>
 </div>
 
-<div style="background: url('assets/i/img.png') repeat">
+<div style="background: url('assets/images/bg1.jpg')">
 
     <div class="am-text-center  am-padding-vertical-sm">
         <div class="back am-u-sm-11  am-radius  am-u-sm-centered am-text-left">
@@ -76,13 +75,13 @@
     </div>
 </div>
 <hr/>
-<div class="am-padding-vertical" style="background: url('assets/images/listBg.png') no-repeat;">
+<div class="am-padding-vertical" style="background: url('assets/images/leftColor.png') no-repeat; background-size: contain">
     <div class="am-g am-inline">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon" style="vertical-align: text-top">
+            <img src="assets/images/hui.png" class="icon">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
-        <div class="am-u-sm-5 text-grey am-text-xs am-inline">已有2000人领取
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
@@ -90,8 +89,7 @@
 
 <hr/>
 <a href="vip.html">
-    <div class="am-g am-padding-vertical"
-         style="background: url('assets/images/listBgVerifyvip.png') no-repeat;  background-size:100%">
+    <div class="am-g am-padding-vertical" style="background: url('assets/images/leftColor.png') no-repeat;">
         <div class=" am-u-sm-offset-1 am-u-sm-9 am-padding-left am-text-sm">你是会员会员会员</div>
         <div class="am-u-sm-2 text-grey am-text-xs am-inline">
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
@@ -102,7 +100,7 @@
     <hr/>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
@@ -115,7 +113,7 @@
     <hr/>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/chong.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
@@ -125,10 +123,10 @@
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
-    <hr class="am-hide"/>
+    <hr/>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/chong.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
@@ -141,7 +139,7 @@
     <hr class="am-hide"/>
     <div class="am-g am-padding-vertical am-hide">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
@@ -154,7 +152,7 @@
     <hr class="am-hide"/>
     <div class="am-g am-padding-vertical am-hide">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/hui.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
@@ -169,17 +167,14 @@
 <div class="am-text-center am-padding-xs" id="more" style="background: #f9f9f9">
     更多优惠 <span class="am-icon-caret-down"></span>
 </div>
-<hr/>
-<div class="am-padding  second-title am-text-center">
+<div class="am-padding second-title am-text-center">
     <img src="assets/images/star@1x.png" alt=""> &nbsp;&nbsp;买单可享&nbsp;&nbsp;
     <img src="assets/images/star@1x.png" alt="">
 </div>
-<hr/>
 <div class="">
-
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1 am-text-left">
-            <img src="assets/images/抵@1x.png" class="icon am-margin-top-xs">
+            <img src="assets/images/ji.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-10 am-padding-left am-text-sm">代金券20元
             <div class="am-text-xs text-grey">当天有效</div>
@@ -192,7 +187,7 @@
     <hr/>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1 am-text-left">
-            <img src="assets/images/抵@1x.png" class="icon am-margin-top-xs">
+            <img src="assets/images/te.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-10 am-padding-left am-text-sm">代金券20元
             <div class="am-text-xs text-grey">当天有效</div>
@@ -205,7 +200,7 @@
     <hr/>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1 am-text-left">
-            <img src="assets/images/抵@1x.png" class="icon am-margin-top-xs">
+            <img src="assets/images/di.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-10 am-padding-left am-text-sm">代金券20元
             <div class="am-text-xs text-grey">当天有效</div>
@@ -218,7 +213,20 @@
     <hr/>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1 am-text-left">
-            <img src="assets/images/抵@1x.png" class="icon am-margin-top-xs">
+            <img src="assets/images/fan.png" class="icon am-margin-top-xs">
+        </div>
+        <div class="am-u-sm-10 am-padding-left am-text-sm">代金券20元
+            <div class="am-text-xs text-grey">当天有效</div>
+        </div>
+        <div class="am-u-sm-1 text-grey am-text-xs">
+            <div class="am-fr activity-arrow am-margin-top-xs"><i class="iconfont">&#xe605;</i>
+            </div>
+        </div>
+    </div>
+    <hr/>
+    <div class="am-g am-padding-vertical">
+        <div class="am-u-sm-1 am-text-left">
+            <img src="assets/images/zhe.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-10 am-padding-left am-text-sm">代金券20元
             <div class="am-text-xs text-grey">当天有效</div>
@@ -230,7 +238,6 @@
     </div>
 </div>
 
-<hr/>
 <div class="am-padding second-title am-text-center">店铺相关</div>
 <div class="">
     <div class="am-padding-sm"><i class="iconfont text-grey">&#xe604;</i>&nbsp;&nbsp;武宁路101号我格广场506室</div>
@@ -257,6 +264,7 @@
 		</span>
     </div>
 </div>
+<div style="height: 120px"></div>
 <div class="am-g am-sticky" style="position: fixed;bottom: 0;background: white">
     <hr/>
     <div class="am-g am-margin-vertical-sm ">
