--- a/code.html
+++ b/code.html
@@ -98,7 +98,7 @@
 <div class="am-padding-vertical" style="background: url('assets/images/listBg.png') no-repeat;margin: auto">
     <div class="am-g am-inline">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon" style="vertical-align: text-top">
+            <img src="assets/images/quan.png" class="icon" style="vertical-align: text-top">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-inline" style="vertical-align: text-top">已有2000人领取
@@ -119,7 +119,7 @@
     <hr/>
     <div class="am-g am-padding-top">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
@@ -132,7 +132,7 @@
     <hr/>
     <div class="am-g am-padding-top">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
@@ -145,7 +145,7 @@
     <hr class="am-hide"/>
     <div class="am-g am-padding-top am-hide">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
@@ -158,7 +158,7 @@
     <hr class="am-hide"/>
     <div class="am-g am-padding-top am-hide">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
@@ -171,7 +171,7 @@
     <hr class="am-hide"/>
     <div class="am-g am-padding-top am-hide">
         <div class="am-u-sm-1">
-            <img src="assets/images/coupon.png" class="icon am-margin-top-xs">
+            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs">已有2000人领取
