--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="SHANGBIN"/>
 
-    <link rel="stylesheet" href="assets/css/amazeui.css">
+    <link rel="stylesheet" href="assets/css/amazeui.min.css">
     <link rel="stylesheet" href="assets/css/common.css">
 
 </head>
 
 <body>
-<div class="bg-white" data-am-sticky>
+<div style="position: fixed;z-index: 100" class="am-g">
     <header data-am-widget="header" class="am-header am-header-default bg-white">
         <div class="am-header-left ">
             <img src="assets/i/favicon.png" style="width: 80px;height: 30px">
         </div>
 
-        <div class="am-header-right am-header-nav am-dropdown" style="color: black" data-am-dropdown>
+        <div class="am-header-right am-header-nav am-dropdown text-black" data-am-dropdown>
             <a class="am-dropdown-toggle" href="#" data-am-dropdown-toggle>
-                <h4 style="color: black" data-am-dropdown-toggle><img src="assets/images/user.png"> 小邦</h4>
+                <h4 class="text-black" data-am-dropdown-toggle><img src="assets/images/user.png"> 小邦</h4>
             </a>
             <ul class="am-dropdown-content am-radius am-text-center">
                 <li><a href="#">重置密码</a></li>
@@ -52,7 +52,7 @@
     </header>
     <hr/>
 </div>
-
+<div style="height: 50px"></div>
 <div style="background: url('assets/images/bg1.jpg')">
 
     <div class="am-text-center  am-padding-vertical-sm">
@@ -75,7 +75,8 @@
     </div>
 </div>
 <hr/>
-<div class="am-padding-vertical" style="background: url('assets/images/leftColor.png') no-repeat; background-size: contain">
+<div class="am-padding-vertical"
+     style="background: url('assets/images/leftColor.png') no-repeat; background-size: contain">
     <div class="am-g am-inline">
         <div class="am-u-sm-1">
             <img src="assets/images/hui.png" class="icon">
@@ -86,7 +87,6 @@
         </div>
     </div>
 </div>
-
 <hr/>
 <a href="vip.html">
     <div class="am-g am-padding-vertical" style="background: url('assets/images/leftColor.png') no-repeat;">
@@ -104,7 +104,7 @@
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+            <button type="button" class="am-btn am-btn-xs button">
                 领劵到特权
             </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
@@ -117,46 +117,46 @@
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+            <button type="button" class="am-btn am-btn-xs button">
                 领劵到特权
             </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
-    <hr/>
-    <div class="am-g am-padding-vertical">
+    <hr class="hide"/>
+    <div class="am-g am-padding-vertical hide">
         <div class="am-u-sm-1">
             <img src="assets/images/chong.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+            <button type="button" class="am-btn am-btn-xs button">
                 领劵到特权
             </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
-    <hr class="am-hide"/>
-    <div class="am-g am-padding-vertical am-hide">
+    <hr class="hide"/>
+    <div class="am-g am-padding-vertical hide">
         <div class="am-u-sm-1">
-            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
+            <img src="assets/images/chong.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+            <button type="button" class="am-btn am-btn-xs button">
                 领劵到特权
             </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
-    <hr class="am-hide"/>
-    <div class="am-g am-padding-vertical am-hide">
+    <hr class="hide"/>
+    <div class="am-g am-padding-vertical hide">
         <div class="am-u-sm-1">
-            <img src="assets/images/hui.png" class="icon am-margin-top-xs">
+            <img src="assets/images/chong.png" class="icon am-margin-top-xs">
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs am-btn-danger" style="background: #ff6966;padding: 5px 12px">
+            <button type="button" class="am-btn am-btn-xs button">
                 领劵到特权
             </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
@@ -165,13 +165,13 @@
 </div>
 <hr/>
 <div class="am-text-center am-padding-xs" id="more" style="background: #f9f9f9">
-    更多优惠 <span class="am-icon-caret-down"></span>
+    更多优惠 ▼
 </div>
 <div class="am-padding second-title am-text-center">
     <img src="assets/images/star@1x.png" alt=""> &nbsp;&nbsp;买单可享&nbsp;&nbsp;
     <img src="assets/images/star@1x.png" alt="">
 </div>
-<div class="">
+<div>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1 am-text-left">
             <img src="assets/images/ji.png" class="icon am-margin-top-xs">
@@ -247,37 +247,35 @@
     <div class="am-padding-sm"><i class="iconfont text-grey">&#xe602;</i>&nbsp;&nbsp;武宁路101号我格广场506室</div>
 </div>
 <div class="am-padding  second-title am-text-center">往来上宾</div>
-<div class="am-padding-sm">
-    <div class="">
+<div class="am-padding">
+    <div>
         <img class="am-radius" alt="40*40"
-             src="http://s.amazeui.org/media/i/demos/bw-2014-06-19.jpg?imageView/1/w/1000/h/1000/q/80" width="40"
+             src="assets/images/avatar.jpg" width="40"
              height="40"/>
         <img class="am-radius" alt="40*40"
-             src="http://s.amazeui.org/media/i/demos/bw-2014-06-19.jpg?imageView/1/w/1000/h/1000/q/80" width="40"
+             src="assets/images/avatar.jpg" width="40"
              height="40"/>
         <img class="am-radius" alt="40*40"
-             src="http://s.amazeui.org/media/i/demos/bw-2014-06-19.jpg?imageView/1/w/1000/h/1000/q/80" width="40"
+             src="assets/images/avatar.jpg" width="40"
              height="40"/>
         <i class="iconfont text-grey">&#xe601;</i>
-		<span class=" text-grey am-text-xs am-fr am-padding-top-xs">
-			<i class="iconfont">&#xe605;</i>
-		</span>
+
     </div>
 </div>
-<div style="height: 120px"></div>
-<div class="am-g am-sticky" style="position: fixed;bottom: 0;background: white">
+<div style="height: 100px" class="second-title"></div>
+<div class="am-g  bg-white" style="position: fixed;bottom: 0;">
     <hr/>
     <div class="am-g am-margin-vertical-sm ">
         <div class="am-u-sm-12  am-text-center">
             <a href="power.html">
-                <button class=" am-u-sm-10 am-u-sm-offset-1 am-btn am-radius" style="background: #ff6966;color: #fff">
+                <button class=" am-u-sm-10 am-u-sm-offset-1 am-btn am-radius bg-orange text-white">
                     召唤特权
                     智付买单
                 </button>
             </a>
         </div>
     </div>
-    <div class="am-text-center am-text-xs" style="color: #ff6966"><img src="assets/images/pay.png">
+    <div class="am-text-center am-text-xs text-orange"><img src="assets/images/pay.png">
         上宾会自动发匹配最佳优惠（已有12人支付买单）
     </div>
     <hr style="margin: 5px 0"/>
@@ -288,24 +286,6 @@
 </div>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/amazeui.min.js"></script>
-
-<script>
-    $(function () {
-        $('#more').on('click', function () {
-            $(this).hide();
-            $('#activity').find('.am-hide').removeClass('am-hide');
-        });
-        $(window).scroll(function () {
-            var yScroll = self.pageYOffset;
-            if (yScroll == 0) {
-                $('#footer').addClass('am-hide');
-            }
-            else {
-                $('#footer').removeClass('am-hide');
-            }
-        });
-    });
-
-</script>
+<script src="assets/js/index.js"></script>
 </body>
 </html>
