--- a/vip.html
+++ b/vip.html
@@ -26,7 +26,6 @@
     <meta name="apple-mobile-web-app-title" content="SHANGBIN"/>
 
     <link rel="stylesheet" href="assets/css/amazeui.css">
-    <!--<link rel="stylesheet" href="assets/css/app.css">-->
     <link rel="stylesheet" href="assets/css/common.css">
     <style>
         .am-nav-tabs.am-nav-justify > li > a {
@@ -59,31 +58,26 @@
     </style>
 </head>
 <body>
-<header data-am-widget="header"
-        class="am-header am-header-default bg-white am-animation-scale-down" id="test1">
-    <div class="am-header-left am-header-nav">
-        <a href="#left-link">
-            <i class="iconfont text-orange am-text-lg">&#xe606;</i>
-        </a>
-    </div>
 
-    <h1 class="am-header-title">
-        <a href="#title-link">
-            <div class="text-black am-text-truncate ">会员规则</div>
-        </a>
-    </h1>
+<div class="am-g am-sticky">
+    <header data-am-widget="header"
+            class="am-header am-header-default bg-white am-animation-scale-down">
+        <div class="am-header-left am-header-nav">
+            <a href="javascript:history.go(-1)">
+                <i class="iconfont text-orange am-text-lg">&#xe60a;</i>
+            </a>
+        </div>
 
-    <div class="am-header-right am-header-nav">
-        <a href="#right-link" class="text-orange">
-            <i class="iconfont text-orange">&#xe600;</i>
-        </a>
-        <a href="#right-link" class="text-orange">
-            <i class="iconfont text-orange">&#xe601;</i>
-        </a>
-    </div>
-</header>
+        <div class="am-header-title">
+            <div class="text-black am-text-truncate">会员规则</div>
+        </div>
+
+    </header>
+    <hr/>
+</div>
+<div style="height: 50px"></div>
+
 <!--登陆-->
-<hr/>
 <div class="am-padding-sm">
     <div class="am-padding-vertical-xs">
         <strong>如果需要升级会员，请告知服务员为你服务~</strong></div>
