--- a/power.html
+++ b/power.html
@@ -20,6 +20,9 @@
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
 
+    <!--ios phone-->
+    <meta name="format-detection" content="telephone=no"/>
+
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -31,6 +34,148 @@
 </head>
 
 <body>
+<div class="am-g am-sticky">
+    <header data-am-widget="header"
+            class="am-header am-header-default bg-white am-animation-scale-down">
+        <div class="am-header-left am-header-nav">
+            <a href="javascript:history.go(-1)">
+                <i class="iconfont text-orange am-text-lg">&#xe60a;</i>
+            </a>
+        </div>
+        <div class="am-header-title">
+            <div class="text-black am-text-truncate">我的权益</div>
+        </div>
+
+    </header>
+    <hr/>
+</div>
+<div style="height: 50px"></div>
+
+<section class="text-white bg-grey-white">
+    <div style="height: 70px" class="am-padding-sm bg-white">
+        <div class="border-radius"
+             style="background:url('assets/images/card-bg.png') no-repeat;background-size: 100% 100%;height: 90px">
+            <div class="am-padding-sm" style="margin: auto">
+                <div>
+                    <strong class="am-text-truncate">徽味轩银卡会员</strong>
+                    <div class="am-fr am-text-xs" style="padding-top: 3px">
+                        <a class="text-white" href="vip.html">
+                            <span class="border-radius border" style="padding: 3px 6px;">会员规则</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="am-text-center am-margin-top-sm am-text-lg"
+                     style="background-color: #ff534f;border-radius: 8px;">
+                    <div class="text-white" style="text-shadow: 2px 3px 2px #d8605e">141 452 532 52</div>
+                </div>
+                <!--未登录begin-->
+                <!--<div style="margin-left: 40%;margin-top: 6%">-->
+                <!--<span class="border-radius border am-text-xs" style="padding: 3px 6px;">加入会员</span>-->
+                <!--</div>-->
+                <!--未登录end-->
+
+            </div>
+        </div>
+    </div>
+    <div style="height: 40px">
+    </div>
+</section>
+<hr/>
+<div class="text-grey">
+    <div class="am-padding-sm">
+        <i class="iconfont">&#xe60c;</i>
+        <span class="padding-xxs text-black">充值余额</span>
+        <span class="am-fr">$2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
+    </div>
+    <hr/>
+    <div class="am-padding-sm">
+        <i class="iconfont">&#xe60b;</i>
+        <span class="padding-xxs text-black">会员积分</span>
+        <span class="am-fr">$2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
+    </div>
+    <hr/>
+</div>
+<div class="bg-grey-white border" style="height:10px"></div>
+<section>
+    <div class="am-padding-sm text-grey am-text-sm">已领券(3)</div>
+    <hr/>
+    <div class="am-padding-sm">
+        <!--代金券begin-->
+        <div class="border am-margin-bottom-xs border-radius">
+            <div class=" am-g am-g-collapse am-nbfc">
+                <div class="am-u-sm-9">
+                    <div class="am-padding-sm">
+                        100元代金券
+                        <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效</div>
+                    </div>
+                </div>
+                <div class="am-u-sm-3 equal-height text-white am-text-center ">
+                    <div style="background-color: #ff534f;border-radius: 0 5px;"
+                         class="equal-height am-padding-vertical-sm">
+                        <img src="assets/images/dollar.png" alt="dollar">
+                        <div class="am-text-xs am-margin-top-xs">代金券</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!--代金券end-->
+        <!--抵用券-->
+        <div class="border am-margin-bottom-xs border-radius">
+            <div class=" am-g am-g-collapse am-nbfc">
+                <div class="am-u-sm-9">
+                    <div class="am-padding-sm">
+                        香辣鸡翅抵用券
+                        <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效</div>
+                    </div>
+                </div>
+                <div class="am-u-sm-3 equal-height text-white am-text-left">
+                    <div style="background: #df3121;border-radius: 0 5px;"
+                         class="equal-height">
+                        <img src="assets/images/gold.png" alt="dollar" style="width: 100%">
+                        <div class="am-padding-sm" style="color: #fce243;font-style: italic">
+                            <div class="am-text-xs" style="text-decoration: line-through">
+                                ￥150.0
+                            </div>
+                            <div style="line-height: 16px">￥<span class="am-text-lg">100</span>.0
+                                <div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--抵用券-->
+        <!--抵用券-->
+        <div class="border am-margin-bottom-xs border-radius">
+            <div class=" am-g am-g-collapse am-nbfc">
+                <div class="am-u-sm-9">
+                    <div class="am-padding-sm">
+                        香辣鸡翅
+                        <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效，满500元可用100元换购150元制定商品一个</div>
+                    </div>
+                </div>
+                <div class="am-u-sm-3 equal-height text-white am-text-left">
+                    <div style="background: #df3121;border-radius: 0 5px;"
+                         class="equal-height">
+                        <img src="assets/images/gold.png" alt="dollar" style="width: 100%">
+                        <div class="am-padding-sm am-text-center" style="color: #fce243;font-style: italic">
+                            <div class="am-text-xs" style="text-decoration: line-through">
+                                ￥15
+                            </div>
+                            <div style="line-height: 16px">免费
+                                <div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--抵用券-->
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
