首页cookie 试验 劵和积分的发放

--- a/point.html
+++ b/point.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <title>商户首页</title>
+    <title>会员积分</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -41,7 +41,7 @@
             </a>
         </div>
         <div class="am-header-title">
-            <div class="text-black am-text-truncate">我的权益</div>
+            <div class="text-black am-text-truncate">积分记录</div>
         </div>
 
     </header>
@@ -49,5 +49,103 @@
 </div>
 <div style="height: 50px"></div>
 
+<div class="am-padding-sm">
+    <strong class="am-text-sm">当前积分</strong><br/>
+    <strong class="am-text-xl text-orange">2525.0</strong>
+    <button class="am-btn border-radius text-white  am-u-sm-12 am-u-sm-centered" style="background: #a4a4a4">
+        欲积分兑换，请下载并使用上宾APP
+    </button>
+</div>
+<div class="second-title" style="height: 8px"></div>
+
+<div class="bg-grey-white am-padding-sm am-text-sm text-grey">
+    <strong class="am-text-default text-black am-margin-right-sm">本月</strong>
+    <span>获取积分</span>
+
+    <span class="text-orange padding-xxs">1000.0</span>
+    <span class="am-padding-left-sm">兑换消耗积分</span>
+    <span class="padding-xxs">120.0</span>
+</div>
+<div>
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">兑换换100返100代金券<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-blue">-120</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">兑换换100返100代金券<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">兑换换100返100代金券<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-blue">-120</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+</div>
+<div class="bg-grey-white am-padding-sm am-text-sm text-grey">
+    <strong class="am-text-default text-black am-margin-right-sm">11月</strong>
+    <span>获取积分</span>
+
+    <span class="text-orange padding-xxs">1000.0</span>
+    <span class="am-padding-left-sm">兑换消耗积分</span>
+    <span class="padding-xxs">120.0</span>
+</div>
+<div>
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">兑换换100返100代金券<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-blue">-120</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">兑换换100返100代金券<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">兑换换100返100代金券<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-blue">-120</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+</div>
+<div class="second-title" style="height: 60px"></div>
+
+<div class="bg-white am-g" style="position: fixed;bottom: 0;">
+    <hr/>
+    <div class="am-text-center am-padding-sm am-text-xs text-orange">
+        <img src="assets/images/download@1x.png" alt="下载">
+        现在下载上宾APP，尊享"智付"体验，特权由你 !
+    </div>
+</div>
 </body>
 </html>
