--- a/power.html
+++ b/power.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <title>商户首页</title>
+    <title>我的权益</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -82,17 +82,21 @@
 </section>
 <hr/>
 <div class="text-grey">
-    <div class="am-padding-sm">
-        <i class="iconfont">&#xe60c;</i>
-        <span class="padding-xxs text-black">充值余额</span>
-        <span class="am-fr">$2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
-    </div>
+    <a href="remainder.html">
+        <div class="am-padding-sm">
+            <i class="iconfont">&#xe60c;</i>
+            <span class="padding-xxs text-black">充值余额</span>
+            <span class="am-fr">$2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
+        </div>
+    </a>
     <hr/>
-    <div class="am-padding-sm">
-        <i class="iconfont">&#xe60b;</i>
-        <span class="padding-xxs text-black">会员积分</span>
-        <span class="am-fr">$2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
-    </div>
+    <a href="point.html">
+        <div class="am-padding-sm">
+            <i class="iconfont">&#xe60b;</i>
+            <span class="padding-xxs text-black">会员积分</span>
+            <span class="am-fr">$2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
+        </div>
+    </a>
     <hr/>
 </div>
 <div class="bg-grey-white border" style="height:10px"></div>
