--- a/vip.html
+++ b/vip.html
@@ -221,8 +221,14 @@
         </div>
     </div>
 </div>
-
 <!--登陆end-->
+<div class="second-title" style="height: 63px"></div>
+
+<div class="am-g  bg-white" style="position: fixed;bottom: 0;">
+    <div class="am-u-sm-12 am-margin-sm">
+        <button class="am-btn button am-block am-u-sm-10 am-u-sm-centered">加入会员</button>
+    </div>
+</div>
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/amazeui.min.js"></script>
