--- a/remainder.html
+++ b/remainder.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <title>商户首页</title>
+    <title>充值余额</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -41,13 +41,85 @@
             </a>
         </div>
         <div class="am-header-title">
-            <div class="text-black am-text-truncate">我的权益</div>
+            <div class="text-black am-text-truncate">充值记录</div>
         </div>
 
     </header>
     <hr/>
 </div>
 <div style="height: 50px"></div>
+
+<div class="am-padding-sm">
+    <strong class="am-text-sm">当前余额</strong><br/>
+    <strong class="am-text-xl text-orange">2525.0</strong>
+    <button class="am-btn border-radius text-white  am-u-sm-12 am-u-sm-centered" style="background: #a4a4a4">
+        欲充值金额，请呼叫服务员助您操作
+    </button>
+</div>
+<div class="second-title" style="height: 8px"></div>
+<div class="am-padding-sm">
+    <div class="am-text-xs text-orange">请向服务员展示"识别码"升级会员!</div>
+    <div class="am-g am-g-collapse am-text-center am-text-lg text-orange ">
+        <div class="am-u-sm-2 am-g-collapse am-text-left">
+            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+        </div>
+        <div class="am-u-sm-2 am-g-collapse am-text-left">
+            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+        </div>
+        <div class="am-u-sm-2 am-g-collapse am-text-left">
+            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+        </div>
+        <div class="am-u-sm-2 am-g-collapse am-text-left">
+            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+        </div>
+        <div class="am-u-sm-2 am-g-collapse am-text-left">
+            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+        </div>
+        <div class="am-u-sm-2 am-g-collapse am-text-left">
+            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+        </div>
+    </div>
+</div>
+<div class="bg-grey-white am-padding-sm am-text-sm text-grey">
+    <strong class="am-text-default text-black am-margin-right-sm">本月</strong>
+</div>
+<div>
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">上上谦（上海徐家汇总店）消费买单<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-blue">-120</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+</div>
+<div class="bg-grey-white am-padding-sm am-text-sm text-grey">
+    <strong class="am-text-default text-black am-margin-right-sm">11月</strong>
+</div>
+<div>
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+</div>
 
 </body>
 </html>
